--- a/BUILD.gn
+++ b/BUILD.gn
@@ -316,6 +316,10 @@ source_set("libdawn_native_sources") {
       "src/dawn_native/d3d12/HeapD3D12.h",
       "src/dawn_native/d3d12/NativeSwapChainImplD3D12.cpp",
       "src/dawn_native/d3d12/NativeSwapChainImplD3D12.h",
+      "src/dawn_native/d3d12/NonShaderVisibleDescriptorAllocatorD3D12.cpp",
+      "src/dawn_native/d3d12/NonShaderVisibleDescriptorAllocatorD3D12.h",
+      "src/dawn_native/d3d12/NonShaderVisibleHeapAllocationD3D12.cpp",
+      "src/dawn_native/d3d12/NonShaderVisibleHeapAllocationD3D12.h",
       "src/dawn_native/d3d12/PipelineLayoutD3D12.cpp",
       "src/dawn_native/d3d12/PipelineLayoutD3D12.h",
       "src/dawn_native/d3d12/PlatformFunctions.cpp",
