--- a/src/common/BUILD.gn
+++ b/src/common/BUILD.gn
@@ -86,6 +86,18 @@ config("dawn_internal") {
   # Only internal Dawn targets can use this config, this means only targets in
   # this BUILD.gn file.
   visibility = [ ":*" ]
+
+  # Enable more warnings that were found when using Dawn in other projects
+  if (is_clang) {
+    cflags += [
+      "-Wstrict-prototypes",
+      "-Winconsistent-missing-destructor-override",
+      "-Wshadow-field",
+      "-Wmissing-field-initializers",
+      "-Wtautological-type-limit-compare",
+      "-Wcstring-format-directive",
+    ]
+  }
 }
 
 ###############################################################################
