Warning I'm not sure we should have?
Change-Id: I4c657ee76c43c01ae007a7af7bcf154ac6309b17

--- a/src/common/BUILD.gn
+++ b/src/common/BUILD.gn
@@ -94,6 +94,7 @@ config("dawn_internal") {
       "-Winconsistent-missing-destructor-override",
       "-Wshadow-field",
       "-Wmissing-field-initializers",
+      "-Wtautological-type-limit-compare",
       "-Wcstring-format-directive",
     ]
   }
