--- a/scripts/dawn_overrides_with_defaults.gni
+++ b/scripts/dawn_overrides_with_defaults.gni
@@ -63,5 +63,6 @@ if (!defined(dawn_swiftshader_dir)) {
 }
 
 if (!defined(dawn_vulkan_validaion_layers_dir)) {
-  dawn_vulkan_validaion_layers_dir = "//third_party/vulkan-validation-layers"
+  # Default to VVLs not being available.
+  dawn_vulkan_validaion_layers_dir = ""
 }
