--- a/src/dawn_native/BUILD.gn
+++ b/src/dawn_native/BUILD.gn
@@ -302,6 +302,8 @@ source_set("dawn_native_sources") {
       "d3d12/NativeSwapChainImplD3D12.h",
       "d3d12/NonShaderVisibleDescriptorAllocatorD3D12.cpp",
       "d3d12/NonShaderVisibleDescriptorAllocatorD3D12.h",
+      "d3d12/NonShaderVisibleDescriptorAllocatorManagerD3D12.cpp",
+      "d3d12/NonShaderVisibleDescriptorAllocatorManagerD3D12.h",
       "d3d12/PipelineLayoutD3D12.cpp",
       "d3d12/PipelineLayoutD3D12.h",
       "d3d12/PlatformFunctions.cpp",
