Add WireClient::Disconnect to stop serializing commands
Change-Id: I6a69c32cc506069554ead18ee83a156ca70e2ce2

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -217,6 +217,7 @@ test("dawn_unittests") {
     "src/tests/unittests/wire/WireArgumentTests.cpp",
     "src/tests/unittests/wire/WireBasicTests.cpp",
     "src/tests/unittests/wire/WireBufferMappingTests.cpp",
+    "src/tests/unittests/wire/WireDisconnectTests.cpp",
     "src/tests/unittests/wire/WireErrorCallbackTests.cpp",
     "src/tests/unittests/wire/WireExtensionTests.cpp",
     "src/tests/unittests/wire/WireFenceTests.cpp",
