Split third_party/BUILD.gn in per-project files.
Bug: chromium:1064305

Change-Id: I6fc2da97e20865b62ff34a9d1c3f42120ac90348

--- a/src/dawn_native/BUILD.gn
+++ b/src/dawn_native/BUILD.gn
@@ -447,7 +447,7 @@ source_set("dawn_native_sources") {
   }
 
   if (dawn_enable_vulkan) {
-    public_deps += [ "${dawn_root}/third_party:vulkan_headers" ]
+    public_deps += [ "${dawn_root}/third_party/khronos:vulkan_headers" ]
     sources += [
       "vulkan/AdapterVk.cpp",
       "vulkan/AdapterVk.h",
