dawn_wire: Validate that all objects are from the same device in the client
This is a temporary fix until dawn_wire can support multiple devices. When
using objects from different devices, the wire will inject an error into the
receiver object's device. Methods that return objects will return a dummy
object. Using the dummy object will cause a fatal error on the server.

Without this fix, the server could blindly lookup that ObjectId which could
point to some other object. This would bypass same-device validation and have
incorrect results.

Bug: dawn:383
Change-Id: I898f07d4b26f2a97ef952b82af488e7f807c36f0

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -222,6 +222,7 @@ test("dawn_unittests") {
     "src/tests/unittests/wire/WireFenceTests.cpp",
     "src/tests/unittests/wire/WireInjectTextureTests.cpp",
     "src/tests/unittests/wire/WireMemoryTransferServiceTests.cpp",
+    "src/tests/unittests/wire/WireMultipleDeviceTests.cpp",
     "src/tests/unittests/wire/WireOptionalTests.cpp",
     "src/tests/unittests/wire/WireTest.cpp",
     "src/tests/unittests/wire/WireTest.h",
