--- a/src/common/BUILD.gn
+++ b/src/common/BUILD.gn
@@ -95,6 +95,7 @@ config("dawn_internal") {
       "-Wshadow-field",
       "-Wmissing-field-initializers",
       "-Wcstring-format-directive",
+      "-Wextra-semi-stmt",
     ]
   }
 }
@@ -143,13 +144,9 @@ if (is_win || is_linux || is_mac || is_fuchsia || is_android) {
     ]
 
     public_configs = [ ":dawn_internal" ]
-    deps = [
-      "${dawn_root}/src/dawn:dawn_headers",
-    ]
+    deps = [ "${dawn_root}/src/dawn:dawn_headers" ]
     if (dawn_enable_vulkan) {
-      public_deps = [
-        "${dawn_root}/third_party/khronos:vulkan_headers",
-      ]
+      public_deps = [ "${dawn_root}/third_party/khronos:vulkan_headers" ]
     }
     if (is_android) {
       libs = [ "log" ]
