--- a/src/dawn_native/BUILD.gn
+++ b/src/dawn_native/BUILD.gn
@@ -464,6 +464,8 @@ source_set("dawn_native_sources") {
       "vulkan/CommandRecordingContext.h",
       "vulkan/ComputePipelineVk.cpp",
       "vulkan/ComputePipelineVk.h",
+      "vulkan/DescriptorSetAllocator.cpp",
+      "vulkan/DescriptorSetAllocator.h",
       "vulkan/DescriptorSetService.cpp",
       "vulkan/DescriptorSetService.h",
       "vulkan/DeviceVk.cpp",
