--- a/src/tests/BUILD.gn
+++ b/src/tests/BUILD.gn
@@ -112,8 +112,8 @@ test("dawn_unittests") {
     ":gmock_and_gtest",
     ":mock_webgpu_gen",
     "${dawn_root}/src/common",
+    "${dawn_root}/src/dawn:dawn_proc",
     "${dawn_root}/src/dawn:dawncpp",
-    "${dawn_root}/src/dawn:libdawn_proc",
     "${dawn_root}/src/dawn_native",
     "${dawn_root}/src/dawn_native:dawn_native_sources",
     "${dawn_root}/src/dawn_wire",
@@ -217,8 +217,8 @@ source_set("dawn_end2end_tests_sources") {
   deps = [
     ":gmock_and_gtest",
     "${dawn_root}/src/common",
+    "${dawn_root}/src/dawn:dawn_proc",
     "${dawn_root}/src/dawn:dawncpp",
-    "${dawn_root}/src/dawn:libdawn_proc",
     "${dawn_root}/src/dawn_native",
     "${dawn_root}/src/dawn_wire",
     "${dawn_root}/src/utils:dawn_utils",
@@ -312,8 +312,8 @@ source_set("dawn_white_box_tests_sources") {
   deps = [
     ":gmock_and_gtest",
     "${dawn_root}/src/common",
+    "${dawn_root}/src/dawn:dawn_proc",
     "${dawn_root}/src/dawn:dawncpp",
-    "${dawn_root}/src/dawn:libdawn_proc",
     "${dawn_root}/src/dawn_native:dawn_native_sources",
     "${dawn_root}/src/dawn_wire",
     "${dawn_root}/src/utils:dawn_utils",
@@ -369,8 +369,8 @@ test("dawn_end2end_tests_tmp") {
     ":dawn_white_box_tests_sources",
     ":gmock_and_gtest",
     "${dawn_root}/src/common",
+    "${dawn_root}/src/dawn:dawn_proc",
     "${dawn_root}/src/dawn:dawncpp",
-    "${dawn_root}/src/dawn:libdawn_proc",
     "${dawn_root}/src/dawn_native",
     "${dawn_root}/src/dawn_wire",
     "${dawn_root}/src/utils:dawn_utils",
@@ -408,8 +408,8 @@ test("dawn_end2end_tests") {
     ":dawn_white_box_tests_sources",
     ":gmock_and_gtest",
     "${dawn_root}/src/common",
+    "${dawn_root}/src/dawn:dawn_proc",
     "${dawn_root}/src/dawn:dawncpp",
-    "${dawn_root}/src/dawn:libdawn_proc",
     "${dawn_root}/src/dawn_native",
     "${dawn_root}/src/dawn_wire",
     "${dawn_root}/src/utils:dawn_utils",
@@ -449,8 +449,8 @@ test("dawn_perf_tests") {
   deps = [
     ":gmock_and_gtest",
     "${dawn_root}/src/common",
+    "${dawn_root}/src/dawn:dawn_proc",
     "${dawn_root}/src/dawn:dawncpp",
-    "${dawn_root}/src/dawn:libdawn_proc",
     "${dawn_root}/src/dawn_native",
     "${dawn_root}/src/dawn_platform",
     "${dawn_root}/src/dawn_wire",
