--- a/src/tests/BUILD.gn
+++ b/src/tests/BUILD.gn
@@ -50,9 +50,7 @@ if (!build_with_chromium) {
 
   static_library("gtest") {
     testonly = true
-    sources = [
-      "${googletest_dir}/googletest/src/gtest-all.cc",
-    ]
+    sources = [ "${googletest_dir}/googletest/src/gtest-all.cc" ]
     public_configs = [ ":gtest_config" ]
   }
 
@@ -66,9 +64,7 @@ if (!build_with_chromium) {
 
   static_library("gmock") {
     testonly = true
-    sources = [
-      "${googletest_dir}/googlemock/src/gmock-all.cc",
-    ]
+    sources = [ "${googletest_dir}/googlemock/src/gmock-all.cc" ]
     public_configs = [ ":gmock_config" ]
   }
 
@@ -233,6 +229,7 @@ source_set("dawn_end2end_tests_sources") {
     "end2end/BufferTests.cpp",
     "end2end/ClipSpaceTests.cpp",
     "end2end/ColorStateTests.cpp",
+    "end2end/ComparisonSamplerTests.cpp",
     "end2end/CompressedTextureFormatTests.cpp",
     "end2end/ComputeCopyStorageBufferTests.cpp",
     "end2end/ComputeIndirectTests.cpp",
@@ -325,9 +322,7 @@ source_set("dawn_white_box_tests_sources") {
     "${dawn_root}/src/dawn_native:dawn_native_static",
   ]
 
-  sources = [
-    "DawnTest.h",
-  ]
+  sources = [ "DawnTest.h" ]
 
   if (dawn_enable_vulkan) {
     deps += [ "${dawn_root}/third_party/khronos:vulkan_headers" ]
