D3D12: De-duplicate sampler heap allocations.
Allows bindgroups that use the same samplers to share
a GPU descriptor heap allocation. This is particularly important
for sampler heaps which incur expensive pipeline flushes
due to the smaller size requiring more frequent switches.

The device dolls out entries to a sampler heap allocation cache.
When the BindGroup is created, it does a lookup and refs the
allocation. This ensures the cache does not grow unbounded
or needlessly store unused entires.

This change is a follow-up of de-coupling heaps.

BUG=dawn:155

Change-Id: I3ab6f1bdb13a40905cb990cd7a2139e73da30303

--- a/src/dawn_native/CMakeLists.txt
+++ b/src/dawn_native/CMakeLists.txt
@@ -185,6 +185,8 @@ if (DAWN_ENABLE_D3D12)
         "d3d12/Forward.h"
         "d3d12/GPUDescriptorHeapAllocationD3D12.cpp"
         "d3d12/GPUDescriptorHeapAllocationD3D12.h"
+        "d3d12/GPUDescriptorHeapCacheD3D12.cpp"
+        "d3d12/GPUDescriptorHeapCacheD3D12.h"
         "d3d12/HeapAllocatorD3D12.cpp"
         "d3d12/HeapAllocatorD3D12.h"
         "d3d12/HeapD3D12.cpp"
