Roll third_party/spirv-cross/ 7e0295abf..92f7d36c7 (2 commits)
Also remove the suppression for a warning that was fixed upstream.

https://chromium.googlesource.com/external/github.com/KhronosGroup/SPIRV-Cross/+log/7e0295abf81c..92f7d36c72bc

$ git log 7e0295abf..92f7d36c7 --date=short --no-merges --format='%ad %ae %s'
2020-04-30 post MSL: Redirect member indices when buffer has been sorted by Offset.
2020-04-30 cwallez Fix -Wmicrosoft-enum-value

Created with:
  roll-dep third_party/spirv-cross

Bug: dawn:394

Change-Id: I58acde476eb39bf28c29095ed0a27df439be6572

--- a/src/common/BUILD.gn
+++ b/src/common/BUILD.gn
@@ -119,10 +119,7 @@ config("dawn_internal") {
     }
 
     # Flags for -pedantic warnings that haven't been fixed yet.
-    cflags += [
-      "-Wno-gnu-zero-variadic-macro-arguments",
-      "-Wno-microsoft-enum-value",
-    ]
+    cflags += [ "-Wno-gnu-zero-variadic-macro-arguments" ]
   }
 
   if (!is_clang && is_win) {
