Pipeline caching: refactor object hashing
Dawn's object-based cache creates keys from memory
addresses. These keys cannot be used in a persistent
cache. This change modifies the keys to only
use hashes so they can be re-used for caching
pipelines.

BUG=dawn:549

Change-Id: Ica64d58ae6a3c6266435cfc3f776c820190f7895

--- a/src/dawn_native/BUILD.gn
+++ b/src/dawn_native/BUILD.gn
@@ -209,6 +209,8 @@ source_set("dawn_native_sources") {
     "Extensions.h",
     "Fence.cpp",
     "Fence.h",
+    "FingerprintRecorder.cpp",
+    "FingerprintRecorder.h",
     "Format.cpp",
     "Format.h",
     "Forward.h",
