--- a/src/dawn_native/CMakeLists.txt
+++ b/src/dawn_native/CMakeLists.txt
@@ -94,6 +94,8 @@ target_sources(dawn_native PRIVATE
     "ErrorScopeTracker.h"
     "Extensions.cpp"
     "Extensions.h"
+    "FingerprintRecorder.cpp"
+    "FingerprintRecorder.h"
     "Fence.cpp"
     "Fence.h"
     "Format.cpp"
