--- a/src/dawn_native/BUILD.gn
+++ b/src/dawn_native/BUILD.gn
@@ -233,6 +233,7 @@ source_set("dawn_native_sources") {
     "PooledResourceMemoryAllocator.h",
     "ProgrammablePassEncoder.cpp",
     "ProgrammablePassEncoder.h",
+    "QueryHelper.h",
     "QuerySet.cpp",
     "QuerySet.h",
     "Queue.cpp",
