--- a/src/dawn_native/CMakeLists.txt
+++ b/src/dawn_native/CMakeLists.txt
@@ -152,6 +152,7 @@ target_sources(dawn_native PRIVATE
     "StagingBuffer.h"
     "Subresource.cpp"
     "Subresource.h"
+    "SubresourceStorage"
     "Surface.cpp"
     "Surface.h"
     "SwapChain.cpp"
