Make device child objects ref the device
In order to add the device object to dawn_wire, we need to allow
the wire to send a DestroyObject command for device-type objects.
This could allow the client to destroy the device before the
device's child objects and introduce use-after-free errors.

To mitigate this, all child objects need to reference the device
in dawn_native so that even if the client attempts to release the
device, it will not be destroyed as long as any one child object
is alive.

Bug: dawn:565
Change-Id: I742514601897dc27bb45c0a903e566e234f0a3bd

--- a/src/tests/BUILD.gn
+++ b/src/tests/BUILD.gn
@@ -384,7 +384,10 @@ source_set("dawn_white_box_tests_sources") {
     "${dawn_root}/src/dawn_native:dawn_native_static",
   ]
 
-  sources = [ "DawnTest.h" ]
+  sources = [
+    "DawnTest.h",
+    "white_box/DeviceRefCountTests.cpp",
+  ]
 
   if (dawn_enable_vulkan) {
     deps += [ "${dawn_root}/third_party/khronos:vulkan_headers" ]
