Support multiple WebGPU devices and adapters in the wire
Bug: dawn:384, dawn:565
Change-Id: Ic26b2d06e2b91ddcf18dd47e7fbfec70cbd0331d

--- a/src/dawn_wire/BUILD.gn
+++ b/src/dawn_wire/BUILD.gn
@@ -67,6 +67,8 @@ dawn_component("dawn_wire") {
     "WireDeserializeAllocator.cpp",
     "WireDeserializeAllocator.h",
     "WireServer.cpp",
+    "client/Adapter.cpp",
+    "client/Adapter.h",
     "client/ApiObjects.h",
     "client/Buffer.cpp",
     "client/Buffer.h",
@@ -78,16 +80,22 @@ dawn_component("dawn_wire") {
     "client/Device.h",
     "client/Fence.cpp",
     "client/Fence.h",
+    "client/Instance.cpp",
+    "client/Instance.h",
     "client/ObjectAllocator.h",
     "client/Queue.cpp",
     "client/Queue.h",
+    "client/Surface.cpp",
+    "client/Surface.h",
     "server/ObjectStorage.h",
     "server/Server.cpp",
     "server/Server.h",
+    "server/ServerAdapter.cpp",
     "server/ServerBuffer.cpp",
     "server/ServerDevice.cpp",
     "server/ServerFence.cpp",
     "server/ServerInlineMemoryTransferService.cpp",
+    "server/ServerInstance.cpp",
     "server/ServerQueue.cpp",
   ]
 
