Fix Android build
Fails on new bots, e.g.
https://cr-buildbucket.appspot.com/build/8801244731747078689

Bug: chromium:1363409, chromium:1370950
Change-Id: If74f94889132d34e6f37d2859b1bc6d0596cfe14

--- a/scripts/dawn_features.gni
+++ b/scripts/dawn_features.gni
@@ -100,7 +100,8 @@ declare_args() {
 
 # UWP only supports CoreWindow for windowing
 dawn_supports_glfw_for_windowing =
-    (is_win && !dawn_is_winuwp) || (is_linux && !is_chromeos) || is_mac
+    (is_win && !dawn_is_winuwp) || (is_linux && !is_chromeos) || is_mac ||
+    is_android
 
 # Much of the GL backend code is shared, so define a convenience var.
 dawn_enable_opengl = dawn_enable_opengles || dawn_enable_desktop_gl
