--- a/src/tint/BUILD.gn
+++ b/src/tint/BUILD.gn
@@ -486,6 +486,8 @@ libtint_source_set("libtint_core_all_src") {
     "transform/canonicalize_entry_point_io.h",
     "transform/combine_samplers.cc",
     "transform/combine_samplers.h",
+    "transform/compact_interstage_variables.cc",
+    "transform/compact_interstage_variables.h",
     "transform/decompose_memory_access.cc",
     "transform/decompose_memory_access.h",
     "transform/decompose_strided_array.cc",
@@ -1192,6 +1194,7 @@ if (tint_build_unittests) {
       "transform/calculate_array_length_test.cc",
       "transform/canonicalize_entry_point_io_test.cc",
       "transform/combine_samplers_test.cc",
+      "transform/compact_interstage_variables_test.cc",
       "transform/decompose_memory_access_test.cc",
       "transform/decompose_strided_array_test.cc",
       "transform/decompose_strided_matrix_test.cc",
