--- a/src/tint/BUILD.gn
+++ b/src/tint/BUILD.gn
@@ -1535,6 +1535,7 @@ if (tint_build_unittests) {
       "writer/hlsl/generator_impl_identifier_test.cc",
       "writer/hlsl/generator_impl_if_test.cc",
       "writer/hlsl/generator_impl_import_test.cc",
+      "writer/hlsl/generator_impl_interstage_var_test.cc",
       "writer/hlsl/generator_impl_loop_test.cc",
       "writer/hlsl/generator_impl_member_accessor_test.cc",
       "writer/hlsl/generator_impl_module_constant_test.cc",
