Add WGSL interpreter and Dawn emulator backend
See docs in docs/tint/interp/.

Change-Id: I9b1d81287e8b86df9ae9379301875d91e6b312eb

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -125,6 +125,7 @@ option_if_not_defined(DAWN_ENABLE_UBSAN "Enable undefined behaviour sanitizer" O
 
 option_if_not_defined(DAWN_ENABLE_D3D11 "Enable compilation of the D3D11 backend" ${ENABLE_D3D11})
 option_if_not_defined(DAWN_ENABLE_D3D12 "Enable compilation of the D3D12 backend" ${ENABLE_D3D12})
+option_if_not_defined(DAWN_ENABLE_WGSL_INTERPRETER "Enable compilation of the WGSL interpreter backend" OFF)
 option_if_not_defined(DAWN_ENABLE_METAL "Enable compilation of the Metal backend" ${ENABLE_METAL})
 option_if_not_defined(DAWN_ENABLE_NULL "Enable compilation of the Null backend" ON)
 option_if_not_defined(DAWN_ENABLE_DESKTOP_GL "Enable compilation of the OpenGL backend" ${ENABLE_DESKTOP_GL})
@@ -171,6 +172,8 @@ option_if_not_defined(TINT_BUILD_WGSL_WRITER "Build the WGSL output writer" ON)
 
 option_if_not_defined(TINT_BUILD_SYNTAX_TREE_WRITER "Build the syntax tree writer" OFF)
 option_if_not_defined(TINT_BUILD_IR "Build the IR" ON)
+
+option_if_not_defined(TINT_BUILD_INTERPRETER "Build the Tint WGSL interpreter" OFF)
 
 option_if_not_defined(TINT_BUILD_FUZZERS "Build fuzzers" OFF)
 option_if_not_defined(TINT_BUILD_SPIRV_TOOLS_FUZZER "Build SPIRV-Tools fuzzer" OFF)
@@ -285,6 +288,7 @@ message(STATUS "Dawn build Vulkan backend: ${DAWN_ENABLE_VULKAN}")
 message(STATUS "Dawn build OpenGL backend: ${DAWN_ENABLE_DESKTOP_GL}")
 message(STATUS "Dawn build OpenGL ES backend: ${DAWN_ENABLE_OPENGLES}")
 message(STATUS "Dawn build Null backend: ${DAWN_ENABLE_NULL}")
+message(STATUS "Dawn build WGSL interpreter backend: ${DAWN_ENABLE_WGSL_INTERPRETER}")
 
 message(STATUS "Dawn build with asserts in all configurations: ${DAWN_ALWAYS_ASSERT}")
 message(STATUS "Dawn build Wayland support: ${DAWN_USE_WAYLAND}")
@@ -315,6 +319,7 @@ message(STATUS "Tint build SPIR-V writer: ${TINT_BUILD_SPV_WRITER}")
 message(STATUS "Tint build WGSL writer: ${TINT_BUILD_WGSL_WRITER}")
 message(STATUS "Tint build Syntax Tree writer: ${TINT_BUILD_SYNTAX_TREE_WRITER}")
 message(STATUS "Tint build IR: ${TINT_BUILD_IR}")
+message(STATUS "Tint build interpreter: ${TINT_BUILD_INTERPRETER}")
 message(STATUS "Tint build fuzzers: ${TINT_BUILD_FUZZERS}")
 message(STATUS "Tint build SPIRV-Tools fuzzer: ${TINT_BUILD_SPIRV_TOOLS_FUZZER}")
 message(STATUS "Tint build AST fuzzer: ${TINT_BUILD_AST_FUZZER}")
@@ -419,6 +424,9 @@ if (DAWN_ENABLE_D3D11)
 endif()
 if (DAWN_ENABLE_D3D12)
     target_compile_definitions(dawn_internal_config INTERFACE "DAWN_ENABLE_BACKEND_D3D12")
+endif()
+if (DAWN_ENABLE_WGSL_INTERPRETER)
+    target_compile_definitions(dawn_internal_config INTERFACE "DAWN_ENABLE_BACKEND_WGSL_INTERPRETER")
 endif()
 if (DAWN_ENABLE_METAL)
     target_compile_definitions(dawn_internal_config INTERFACE "DAWN_ENABLE_BACKEND_METAL")
@@ -672,6 +680,10 @@ add_subdirectory(src/dawn)
 
 if (TINT_BUILD_SAMPLES)
   add_subdirectory(src/tint/cmd)
+endif()
+
+if (TINT_BUILD_INTERPRETER)
+  add_subdirectory(src/tint/interp)
 endif()
 
 if (TINT_BUILD_FUZZERS)
