--- a/tint_overrides_with_defaults.gni
+++ b/tint_overrides_with_defaults.gni
@@ -86,4 +86,9 @@ declare_args() {
   if (!defined(tint_build_unittests)) {
     tint_build_unittests = true
   }
+
+  # Do not build the interpreter by default
+  if (!defined(tint_build_interpreter)) {
+    tint_build_interpreter = false
+  }
 }
