--- a/src/dawn/platform/CMakeLists.txt
+++ b/src/dawn/platform/CMakeLists.txt
@@ -33,3 +33,5 @@ target_sources(dawn_platform PRIVATE
     "tracing/TraceEvent.h"
 )
 target_link_libraries(dawn_platform PUBLIC dawn_headers PRIVATE dawn_internal_config dawn_common)
+
+install_if_enabled(dawn_platform)
