--- a/src/dawn/wire/CMakeLists.txt
+++ b/src/dawn/wire/CMakeLists.txt
@@ -93,3 +93,5 @@ target_link_libraries(dawn_wire
     PUBLIC dawn_headers
     PRIVATE dawn_common dawn_internal_config
 )
+
+install_if_enabled(dawn_wire)
