before removing syscall failure handling
Change-Id: I746e12f9c56083329c57f15e658d80922a56474b

--- a/src/dawn/native/BUILD.gn
+++ b/src/dawn/native/BUILD.gn
@@ -283,6 +283,10 @@ source_set("sources") {
     "InternalPipelineStore.h",
     "Limits.cpp",
     "Limits.h",
+    "OSEvent.cpp",
+    "OSEvent.h",
+    "OSEventPipe.cpp",
+    "OSEventPipe.h",
     "ObjectBase.cpp",
     "ObjectBase.h",
     "ObjectContentHasher.cpp",
@@ -355,6 +359,8 @@ source_set("sources") {
     "ToBackend.h",
     "Toggles.cpp",
     "Toggles.h",
+    "TrackedFuture.cpp",
+    "TrackedFuture.h",
     "UsageValidationMode.h",
     "VertexFormat.cpp",
     "VertexFormat.h",
