Implement WGPUFuture for WorkDone in Metal/D3D12/Wire
This implements the WGPUFuture version of OnSubmittedWorkDone for the
Metal and D3D12 backends, and in the wire (over the old implementation).

This is a partial implementation of WGPUFuture. It sits alongside the
old API until it's complete and has all of the breaking API changes
we're going to make. (See crbug.com/dawn/2021 .)

For more on WGPUFuture, see the design doc in the crbug.com/dawn/1987 .

Bug: dawn:1987, dawn:2021
Change-Id: If0c82279addf419ef16cc0280416ce2bfb71895f

--- a/src/dawn/native/BUILD.gn
+++ b/src/dawn/native/BUILD.gn
@@ -263,6 +263,8 @@ source_set("sources") {
     "ErrorInjector.h",
     "ErrorScope.cpp",
     "ErrorScope.h",
+    "EventManager.cpp",
+    "EventManager.h",
     "ExecutionQueue.cpp",
     "ExecutionQueue.h",
     "ExternalTexture.cpp",
@@ -283,6 +285,10 @@ source_set("sources") {
     "InternalPipelineStore.h",
     "Limits.cpp",
     "Limits.h",
+    "OSEventPipe.cpp",
+    "OSEventPipe.h",
+    "OSEventReceiver.cpp",
+    "OSEventReceiver.h",
     "ObjectBase.cpp",
     "ObjectBase.h",
     "ObjectContentHasher.cpp",
@@ -355,6 +361,8 @@ source_set("sources") {
     "ToBackend.h",
     "Toggles.cpp",
     "Toggles.h",
+    "TrackedEvent.cpp",
+    "TrackedEvent.h",
     "UsageValidationMode.h",
     "VertexFormat.cpp",
     "VertexFormat.h",
