Add WGPUFuture, and implement for WorkDone in Metal + wire
This implements the WGPUFuture version of OnSubmittedWorkDone for the
Metal backend, as well as in the wire (over the old implementation).

This is a partial implementation of WGPUFuture. It sits alongside the
old API until it's complete and has all of the breaking API changes
we're going to make. (See crbug.com/dawn/2021 .)

For more on WGPUFuture, see the design doc in the crbug.com/dawn/1987 .

Bug: dawn:1987, dawn:2021
Change-Id: If0c82279addf419ef16cc0280416ce2bfb71895f

--- a/src/dawn/tests/BUILD.gn
+++ b/src/dawn/tests/BUILD.gn
@@ -537,6 +537,7 @@ source_set("end2end_tests_sources") {
     "end2end/DualSourceBlendTests.cpp",
     "end2end/DynamicBufferOffsetTests.cpp",
     "end2end/EntryPointTests.cpp",
+    "end2end/EventTests.cpp",
     "end2end/ExperimentalDP4aTests.cpp",
     "end2end/ExternalTextureTests.cpp",
     "end2end/FirstIndexOffsetTests.cpp",
@@ -588,6 +589,7 @@ source_set("end2end_tests_sources") {
     "end2end/VertexStateTests.cpp",
     "end2end/ViewportOrientationTests.cpp",
     "end2end/ViewportTests.cpp",
+    "end2end/WaitAnyTests.cpp",
   ]
 
   libs = []
