[ir][spirv-writer] Handle shader IO
Add a ShaderIO transform that will handle mutating shader IO for each
backend. The common functionality is implemented in the PIMPL State
class, while backend-specific parts are handled in a backend-specific
state objects defined in separate files.

This uses const_cast to directly remove attributes from existing
structure members, which will be cleaned up in the future.

Use this new transform in the SPIR-V backend, and add codegen for
variables in the `in` and `out` address spaces.

Bug: tint:1906
Change-Id: I78392a055d62f363e39d78f50d6efc4f65739a2f

--- a/src/tint/BUILD.gn
+++ b/src/tint/BUILD.gn
@@ -523,6 +523,10 @@ if (tint_build_ir) {
       "ir/transform/block_decorated_structs.h",
       "ir/transform/merge_return.cc",
       "ir/transform/merge_return.h",
+      "ir/transform/shader_io.cc",
+      "ir/transform/shader_io.h",
+      "ir/transform/shader_io_spirv.cc",
+      "ir/transform/shader_io_spirv.h",
       "ir/transform/var_for_dynamic_index.cc",
       "ir/transform/var_for_dynamic_index.h",
     ]
@@ -1866,6 +1870,7 @@ if (tint_build_unittests) {
         "ir/transform/add_empty_entry_point_test.cc",
         "ir/transform/block_decorated_structs_test.cc",
         "ir/transform/merge_return_test.cc",
+        "ir/transform/shader_io_test.cc",
         "ir/transform/test_helper.h",
         "ir/transform/var_for_dynamic_index_test.cc",
       ]
