--- a/src/tint/CMakeLists.txt
+++ b/src/tint/CMakeLists.txt
@@ -832,6 +832,10 @@ if(${TINT_BUILD_IR})
     ir/transform/block_decorated_structs.h
     ir/transform/merge_return.cc
     ir/transform/merge_return.h
+    ir/transform/shader_io.cc
+    ir/transform/shader_io.h
+    ir/transform/shader_io_spirv.cc
+    ir/transform/shader_io_spirv.h
     ir/transform/transform.cc
     ir/transform/transform.h
     ir/transform/var_for_dynamic_index.cc
@@ -1586,6 +1590,7 @@ if(TINT_BUILD_TESTS)
       ir/transform/add_empty_entry_point_test.cc
       ir/transform/block_decorated_structs_test.cc
       ir/transform/merge_return_test.cc
+      ir/transform/shader_io_test.cc
       ir/transform/var_for_dynamic_index_test.cc
       ir/unary_test.cc
       ir/user_call_test.cc
