[ios] Build fixes
Change-Id: Ib742d543e1cf8525ebe61833abb37b7171a2a1ff

--- a/src/dawn/native/BUILD.gn
+++ b/src/dawn/native/BUILD.gn
@@ -572,11 +572,15 @@ source_set("sources") {
 
   if (dawn_enable_metal) {
     frameworks = [
-      "Cocoa.framework",
       "IOKit.framework",
       "IOSurface.framework",
-      "QuartzCore.framework",
     ]
+    if (is_mac) {
+      frameworks += [
+        "QuartzCore.framework",
+        "Cocoa.framework",
+      ]
+    }
     sources += [
       "Surface_metal.mm",
       "metal/BackendMTL.h",
