--- a/scripts/dawn_features.gni
+++ b/scripts/dawn_features.gni
@@ -42,7 +42,7 @@ declare_args() {
   # Enables SwiftShader as the fallback adapter. Requires dawn_swiftshader_dir
   # to be set to take effect.
   # TODO(dawn:1536): Enable SwiftShader for Android.
-  dawn_use_swiftshader = !is_android
+  dawn_use_swiftshader = !is_android && !is_ios
 }
 
 declare_args() {
@@ -61,7 +61,7 @@ declare_args() {
   dawn_enable_d3d12 = is_win
 
   # Enables the compilation of Dawn's Metal backend
-  dawn_enable_metal = is_mac
+  dawn_enable_metal = is_mac || is_ios
 
   # Enables the compilation of Dawn's Null backend
   # (required for unittests, obviously non-conformant)
@@ -79,8 +79,9 @@ declare_args() {
 
   # Enables the compilation of Dawn's Vulkan backend
   # Disables vulkan when compiling for UWP, since UWP only supports d3d
-  dawn_enable_vulkan = is_linux || is_chromeos || (is_win && !dawn_is_winuwp) ||
-                       is_fuchsia || is_android || dawn_use_swiftshader
+  dawn_enable_vulkan =
+      (is_linux || is_chromeos || (is_win && !dawn_is_winuwp) || is_fuchsia ||
+       is_android || dawn_use_swiftshader) && !is_ios
 
   # Enables error injection for faking failures to native API calls
   dawn_enable_error_injection =
