Implements a thread-safe WeakRef typing.
Bug: dawn:1769
Change-Id: I54f4600a38def5b398e4309cbbc61711ca3f76e3

--- a/src/dawn/common/CMakeLists.txt
+++ b/src/dawn/common/CMakeLists.txt
@@ -61,6 +61,7 @@ target_sources(dawn_common PRIVATE
     "PlacementAllocated.h"
     "Platform.h"
     "Preprocessor.h"
+    "Ref.cpp"
     "Ref.h"
     "RefBase.h"
     "RefCounted.cpp"
@@ -78,6 +79,9 @@ target_sources(dawn_common PRIVATE
     "TypeTraits.h"
     "TypedInteger.h"
     "UnderlyingType.h"
+    "WeakRef.h"
+    "WeakRefCounted.cpp"
+    "WeakRefCounted.h"
     "ityp_array.h"
     "ityp_bitset.h"
     "ityp_span.h"
