--- a/src/dawn/common/BUILD.gn
+++ b/src/dawn/common/BUILD.gn
@@ -254,6 +254,7 @@ if (is_win || is_linux || is_chromeos || is_mac || is_fuchsia || is_android) {
       "PlacementAllocated.h",
       "Platform.h",
       "Preprocessor.h",
+      "Ref.cpp",
       "Ref.h",
       "RefBase.h",
       "RefCounted.cpp",
@@ -271,6 +272,9 @@ if (is_win || is_linux || is_chromeos || is_mac || is_fuchsia || is_android) {
       "TypeTraits.h",
       "TypedInteger.h",
       "UnderlyingType.h",
+      "WeakRef.h",
+      "WeakRefCounted.cpp",
+      "WeakRefCounted.h",
       "ityp_array.h",
       "ityp_bitset.h",
       "ityp_span.h",
