Set up permissions for branch day automation for dawn
This change includes the following list of permissions to support branch day automation for dawn:
1. Grant chrome-branch-day@chops-service-accounts.iam.gserviceaccount.com read/create CL access to the dawn repository.
2. Grant CQ+2 permissions to mdb/chrome-release for the dawn repository.

Bug: 1457013
Change-Id: Idf8610f041aa21e049161b7db93016bd4904779c

--- a/project.config
+++ b/project.config
@@ -30,6 +30,7 @@
 	abandon = group cria/project-dawn-committers
 	label-Commit-Queue = +0..+2 group Change Owner
 	label-Commit-Queue = +0..+2 group cria/project-dawn-committers
+	label-Commit-Queue = +0..+2 group mdb/chrome-release
 	labelAs-Commit-Queue = +0..+2 group dawn-scoped@luci-project-accounts.iam.gserviceaccount.com
 	labelAs-Commit-Queue = +0..+1 group cria/project-dawn-tryjob-access
 	label-Auto-Submit = +0..+1 group Change Owner
@@ -59,6 +60,9 @@
 [access "refs/tags/*"]
 	create = group chromium-branch-creators
 	push = group chromium-branch-creators
+[access "refs/for/*"]
+	create = group chrome-branch-day@chops-service-accounts.iam.gserviceaccount.com
+	push = group chrome-branch-day@chops-service-accounts.iam.gserviceaccount.com
 [submit-requirement "Kokoro"]
 	description = A maximum vote is required for the Kokoro label. A minimum vote is blocking.
 	submittableIf = label:Kokoro=MAX AND -label:Kokoro=MIN
