Moves Ref to its own file to break dependency cycles for WeakRefs.
Bug: dawn:1769
Change-Id: I9517e44b35b6cecacd90badf47c2e6d634f7902b

--- a/src/dawn/common/BUILD.gn
+++ b/src/dawn/common/BUILD.gn
@@ -254,6 +254,7 @@ if (is_win || is_linux || is_chromeos || is_mac || is_fuchsia || is_android) {
       "PlacementAllocated.h",
       "Platform.h",
       "Preprocessor.h",
+      "Ref.h",
       "RefBase.h",
       "RefCounted.cpp",
       "RefCounted.h",
