--- a/src/tint/CMakeLists.txt
+++ b/src/tint/CMakeLists.txt
@@ -1608,6 +1608,7 @@ if(TINT_BUILD_TESTS)
 
   if (${TINT_BUILD_IR} AND ${TINT_BUILD_WGSL_WRITER})
     list(APPEND TINT_TEST_SRCS
+      ir/to_program_inlining_test.cc
       ir/to_program_test.cc
     )
   endif()
