--- a/src/tint/BUILD.gn
+++ b/src/tint/BUILD.gn
@@ -2398,6 +2398,7 @@ if (tint_build_unittests) {
         "ir/store_test.cc",
         "ir/switch_test.cc",
         "ir/swizzle_test.cc",
+        "ir/to_program_inlining_test.cc",
         "ir/to_program_roundtrip_test.cc",
         "ir/to_program_test.cc",
         "ir/unary_test.cc",
